@@ -1,13 +1,13 @@
 AM_CPPFLAGS = -I$(top_builddir)/otflib -I$(top_srcdir)/otflib
 
 if AMBUILDBINARIES
-bin_PROGRAMS = \
-	otfdump
+#bin_PROGRAMS = otfdump # until v1.12.2 (conflicts with otfdump from OpenType Fonts)
+bin_PROGRAMS = otfprint
 endif
 
-otfdump_LDADD = $(top_builddir)/otflib/libotf.la
-otfdump_DEPENDENCIES = $(otfdump_LDADD)
-otfdump_SOURCES = \
+otfprint_LDADD = $(top_builddir)/otflib/libotf.la
+otfprint_DEPENDENCIES = $(otfprint_LDADD)
+otfprint_SOURCES = \
 	Makefile.am \
 	Handler.h \
 	Handler.cpp \
