@@ -1,4 +1,8 @@
 1.12.2openmpi
+	- fixed conflicts with OpenType Fonts:
+		- install header files to INCLUDEDIR/otf1
+		- install libraries to LIBDIR/otf1
+		- renamed otfdump to otfprint
 	- OTF library:
 		- replaced temporary workaround for handling bogus zlib
 		  sync. points by a more elaborated solution
